--- a/Electric_Meter/MVVM/Views/ToolView.xaml
+++ b/Electric_Meter/MVVM/Views/ToolView.xaml
@@ -1,25 +1,31 @@
 <UserControl x:Class="Electric_Meter.MVVM.Views.ToolView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-             mc:Ignorable="d"
-             d:DesignWidth="1000" d:DesignHeight="700">
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+			 xmlns:local="clr-namespace:Electric_Meter.MVVM.Views"
+			 mc:Ignorable="d"
+			 
+             MinHeight="480"
+             MinWidth="800">
 
     <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+
         <SolidColorBrush x:Key="TextColorPrimary" Color="#fafafa"/>
-        <SolidColorBrush x:Key="TextColorSecondary" Color="#6B7280"/>
+        <SolidColorBrush x:Key="TextColorSecondary" Color="#fafafa"/>
         <SolidColorBrush x:Key="BackgroundColor" Color="#0a0a0a"/>
-        <SolidColorBrush x:Key="BorderColor" Color="#374151"/>
-        <SolidColorBrush x:Key="AccentColor" Color="#1D4ED8"/>
+        <SolidColorBrush x:Key="BorderColor" Color="#fafafa"/>
+        <SolidColorBrush x:Key="AccentColor" Color="#fafafa"/>
 
         <Style x:Key="BoardLabelStyle" TargetType="TextBlock">
             <Setter Property="Foreground" Value="{StaticResource TextColorPrimary}"/>
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="FontWeight" Value="SemiBold"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="Margin" Value="0,10,0,10"/>
+            <!-- Margin bên phải 20px để tạo khoảng cách với cột giá trị -->
+            <Setter Property="Margin" Value="0,10,20,10"/>
         </Style>
 
         <Style x:Key="BoardValueStyle" TargetType="TextBlock">
@@ -41,10 +47,10 @@
     </UserControl.Resources>
 
     <Border Margin="16"
-            Background="{StaticResource BackgroundColor}"
-            BorderBrush="{StaticResource BorderColor}"
-            BorderThickness="0.5"
-            CornerRadius="10" Padding="30">
+			Background="{StaticResource BackgroundColor}"
+			BorderBrush="{StaticResource BorderColor}"
+			BorderThickness="0.5"
+			CornerRadius="10" Padding="30">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -55,10 +61,10 @@
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,0,15">
                     <ui:SymbolIcon Symbol="Clock24" Margin="0,0,6,0" Foreground="{StaticResource AccentColor}" FontSize="14"/>
                     <TextBlock Text="{Binding CurrentTime, StringFormat='HH:mm:ss dd/MM/yyyy'}"
-                               FontSize="12"
-                               FontWeight="Medium"
-                               VerticalAlignment="Center"
-                               Foreground="{StaticResource TextColorPrimary}"/>
+								   FontSize="12"
+								   FontWeight="Medium"
+								   VerticalAlignment="Center"
+								   Foreground="{StaticResource TextColorPrimary}"/>
                 </StackPanel>
 
                 <Grid>
@@ -68,44 +74,30 @@
                         <ColumnDefinition Width="150"/>
                     </Grid.ColumnDefinitions>
 
+                    <!-- Device ComboBox: Đã thêm Padding cho văn bản của mục được chọn -->
                     <ComboBox Grid.Column="0"
-                              ItemsSource="{Binding LstDevice}"
-                              DisplayMemberPath="name"
-                              SelectedValuePath="devid"
-                              SelectedItem="{Binding SelectedDevice, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                              Foreground="{StaticResource TextColorPrimary}"
-                              Background="{StaticResource BackgroundColor}" BorderBrush="{StaticResource BorderColor}"
-                              Height="32"
-                              VerticalContentAlignment="Center"
-                              Margin="0,0,10,0"
-                              HorizontalAlignment="Left"
-                              Width="200"/>
-
-                    <ComboBox Grid.Column="0"
-                              ItemsSource="{Binding LstDevice}"
-                              DisplayMemberPath="name"
-                              SelectedValuePath="devid"
-                              SelectedItem="{Binding SelectedDevice, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                              Foreground="{StaticResource TextColorPrimary}"
-                              Background="{StaticResource BackgroundColor}"
-                              BorderBrush="{StaticResource BorderColor}"
-                              Height="32"
-                              VerticalContentAlignment="Center"
-                              Margin="0,0,10,0"
-                              HorizontalAlignment="Left"
-                              Width="200"/>
+								  ItemsSource="{Binding LstDevice}"
+								  DisplayMemberPath="name"
+								  SelectedValuePath="devid"
+								  SelectedItem="{Binding SelectedDevice, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+								  Foreground="{StaticResource TextColorPrimary}"
+								  Background="{StaticResource BackgroundColor}" BorderBrush="{StaticResource BorderColor}"
+								  Height="32"
+								  VerticalContentAlignment="Center"
+								  Padding="10,0,10,0"
+								  HorizontalAlignment="Left"/>
 
                     <ComboBox Grid.Column="2"
-                              ItemsSource="{Binding LstAssembling}"
-                              DisplayMemberPath="value"
-                              SelectedValuePath="key"
-                              SelectedItem="{Binding SelectedAssembling,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                              VerticalContentAlignment="Center"
-                              Padding="10,0,10,0"
-                              Height="32"
-                              Foreground="{StaticResource TextColorPrimary}"
-                              Background="{StaticResource BackgroundColor}" BorderBrush="{StaticResource BorderColor}"
-                              HorizontalAlignment="Right"/>
+								  ItemsSource="{Binding LstAssembling}"
+								  DisplayMemberPath="value"
+								  SelectedValuePath="key"
+								  SelectedItem="{Binding SelectedAssembling,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+								  VerticalContentAlignment="Center"
+								  Padding="10,0,10,0"
+								  Height="32"
+								  Foreground="{StaticResource TextColorPrimary}"
+								  Background="{StaticResource BackgroundColor}" BorderBrush="{StaticResource BorderColor}"
+								  HorizontalAlignment="Right"/>
                 </Grid>
             </StackPanel>
 
@@ -116,7 +108,8 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Grid Grid.Column="0">
+                <!-- Khối bên trái: Voltage và Current -->
+                <Grid Grid.Column="0" Margin="0, 0, 10, 0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto"/>
                         <ColumnDefinition Width="Auto"/>
@@ -172,9 +165,11 @@
 
                 </Grid>
 
-                <Grid Grid.Column="2">
+                <!-- Khối bên phải: Power và Energy -->
+                <Grid Grid.Column="2" Margin="10, 0, 0, 0">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
+                        <!-- Đã sửa: Thay Width="*" bằng Width="auto" để cột nhãn chỉ rộng bằng nội dung -->
+                        <ColumnDefinition Width="auto"/>
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
@@ -195,7 +190,7 @@
                         <TextBlock Text="kW" Style="{StaticResource BoardUnitStyle}" />
                     </StackPanel>
 
-                    <TextBlock Grid.Row="1" Grid.Column="0" Text="{Binding PhaseAPowerText}"  Style="{StaticResource BoardLabelStyle}"/>
+                    <TextBlock Grid.Row="1" Grid.Column="0" Text="{Binding PhaseAPowerText}" Style="{StaticResource BoardLabelStyle}"/>
                     <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
                         <TextBlock Text="{Binding Pa}" Style="{StaticResource BoardValueStyle}" />
                         <TextBlock Text="kW" Style="{StaticResource BoardUnitStyle}" />
@@ -235,6 +230,20 @@
 
                 </Grid>
             </Grid>
+
+            <Border Grid.RowSpan="2"
+					Background="{StaticResource BackgroundColor}"
+					Opacity="0.8"
+					Panel.ZIndex="100"
+					Visibility="{Binding IsLoading, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <ui:ProgressRing IsIndeterminate="True"
+								 Width="50"
+								 Height="50"
+								 Foreground="{StaticResource AccentColor}"
+								 HorizontalAlignment="Center"
+								 VerticalAlignment="Center"/>
+            </Border>
+
         </Grid>
     </Border>
 </UserControl>
